ingress-nginx/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginxsvc
  name: nginxsvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginxsvc
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginxsvc
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
