ingress-nginx/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: nginxsvc
spec:
  ingressClassName: nginx
  rules:
  - host: nginxsvc.info
    http:
      paths:
      - backend:
          service:
            name: nginxsvc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
